[gd_scene load_steps=9 format=3 uid="uid://cjam48cr7useg"]

[ext_resource type="Script" path="res://Scripts/display.gd" id="1_numw5"]
[ext_resource type="PackedScene" uid="uid://bmsp1rolao7eu" path="res://Scenes/side_panel.tscn" id="1_v5g7w"]
[ext_resource type="PackedScene" uid="uid://cetiah2cwaix1" path="res://Scenes/player.tscn" id="2_mymdt"]
[ext_resource type="Texture2D" uid="uid://qn1cnj564okp" path="res://Graphics/heartcontainer.png" id="4_ujlwh"]

[sub_resource type="Gradient" id="Gradient_shmjs"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_338ea"]
gradient = SubResource("Gradient_shmjs")

[sub_resource type="Gradient" id="Gradient_3exkr"]
colors = PackedColorArray(0.77084, 0.770839, 0.770839, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wmjb1"]
gradient = SubResource("Gradient_3exkr")
fill_from = Vector2(1, 1)
fill_to = Vector2(1, 0.790598)

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_numw5")

[node name="SidePanel" parent="." instance=ExtResource("1_v5g7w")]
layout_mode = 1
offset_left = 718.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 719.0
offset_bottom = 649.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(719, 649)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.75, 5.729)
top_level = true

[node name="Player" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_mymdt")]

[node name="Textbox" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 188.0
offset_top = 49.0
offset_right = 953.0
offset_bottom = 533.0
texture = SubResource("GradientTexture2D_338ea")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Textbox"]
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 754.0
offset_bottom = 471.0
texture = SubResource("GradientTexture2D_wmjb1")

[node name="RichTextLabel" type="RichTextLabel" parent="Textbox"]
layout_mode = 0
offset_left = 28.0
offset_top = 23.0
offset_right = 744.0
offset_bottom = 461.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Hello[/center]"

[node name="HeartContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 102.0
offset_bottom = 649.0

[node name="AnimatedSprite2D" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 564)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D2" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 501)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D3" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 434)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D4" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 368)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D5" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 305)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D6" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 229)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="AnimatedSprite2D7" type="Sprite2D" parent="HeartContainer"]
position = Vector2(-3, 165)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ujlwh")
centered = false
hframes = 2
frame = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="button_up" from="SidePanel/Talk/Talk" to="." method="_on_talk_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="SidePanel"]
[editable path="SubViewportContainer/SubViewport/Player"]
